fixed image card layout issue

--- a/uocweb/ui/static/base.css
+++ b/uocweb/ui/static/base.css
@@ -171,3 +171,8 @@
 .comment-form {
   height: 100px;
 }
+
+.loading-text {
+  margin: auto;
+  text-align: center;
+}
